--- a/package.json
+++ b/package.json
@@ -1,13 +1,13 @@
 {
   "name": "ai-webhook",
   "version": "1.0.0",
+  "type": "module",
   "main": "api/index.js",
   "scripts": {
     "start": "vercel dev"
   },
   "dependencies": {
-    "axios": "^1.4.0",
+    "axios": "^1.6.8",
     "cheerio": "^1.0.0-rc.12"
   }
 }
-
