--- a/package.json
+++ b/package.json
@@ -1,13 +1,16 @@
 {
-  "name": "ai-webhook",
+  "name": "aiwebhook2",
   "version": "1.0.0",
   "type": "module",
-  "main": "api/index.js",
+  "main": "index.js",
   "scripts": {
-    "start": "vercel dev"
+    "start": "node index.js"
   },
   "dependencies": {
     "axios": "^1.6.8",
-    "cheerio": "^1.0.0-rc.12"
+    "body-parser": "^1.20.2",
+    "cheerio": "^1.0.0-rc.12",
+    "dotenv": "^16.3.1",
+    "express": "^4.18.2"
   }
 }
